--- a/index.html
+++ b/index.html
@@ -66,14 +66,16 @@
                             <li><img src="img/sec_1/ok.svg" alt="ok">Основатель кадрового агентства HR-PROF</li>
                             <li><img src="img/sec_1/ok.svg" alt="ok">MBA по направлению "Управление персоналом"</li>
                             <li><img src="img/sec_1/ok.svg" alt="ok">Вице-президент гильдии HR-клубов ЮФО</li>
-                            <li><img src="img/sec_1/ok.svg" alt="ok">Мама троих детей<br> Автоледи<br> В 20 уже занимала руководящую позицию</li>
+                            <li><img src="img/sec_1/ok.svg" alt="ok">Мама троих детей</li>
+                            <li><img src="img/sec_1/ok.svg" alt="ok"> Автоледи</li>
+                            <li><img src="img/sec_1/ok.svg" alt="ok">В 20 уже занимала руководящую позицию</li>
                         </ul>
                     </div>
-                    <div class="works">
+                  <!--  <div class="works">
                         <img src="img/sec_1/work_1.png" alt="">
                         <img src="img/sec_1/work_2.png" alt="">
                         <img src="img/sec_1/work_3.png" alt="">
-                    </div>
+                    </div> -->
                 </div>
                 <div class="col-md-4">
                     <div class="img_wrapp">
@@ -96,7 +98,7 @@
                         <div class="icon_avatar" style="background-image: url('img/sec_bio/maria.jpg')"></div>
                         <h5>Мария Консманова</h5>
                         <div class="soc_links_wrapp">
-                            <a href="https://www.facebook.com/profile.php?id=100009112262182" class="item"><img src="img/soc_links/fb.svg" alt="fb"></a>
+                            <a href="https://www.facebook.com/people/Maria-Konsmanova/100009112262182" class="item"><img src="img/soc_links/fb.svg" alt="fb"></a>
                             <a href="https://www.instagram.com/maria_konsmanova" class="item"><img src="img/soc_links/inst.svg" alt="inst"></a>
                             <a href="https://www.linkedin.com/in/konsmanovamaria/" class="item"><img src="img/soc_links/in.svg" alt="in"></a>
                         </div>
@@ -200,7 +202,7 @@
                 <img alt="" class="abs_pic dubl_line_vertical" src="img/abs_pic/dubl_line.svg">
                 <img alt="" class="abs_pic circle2" src="img/abs_pic/circle.svg">
                 <div class="media align-items-center">
-                    <div class="border-image" style="background-image: url('img/sec_bio/konstantin.jpg');">
+                    <div class="border-image" style="background-image: url('img/sec_bio/maria.jpg');">
                     </div>
                     <div class="text">
                         <p class="text-title">Задай вопрос и я тебе обязательно отвечу</p>
@@ -297,12 +299,12 @@
                             <tr>
                                 <th scope="row">1</th>
                                 <td>
-                                    <a href="#" class="media">
-                                        <img src="img/sec_my_contacts/vitaliy.jpg" alt="">
-                                        <span>Виталий Тимошенко</span>
+                                    <a href="https://p.smartexpert.net/social/Isaac2019" class="media">
+                                        <img src="img/sec_my_contacts/isaac.png" alt="">
+                                        <span>Ицхак Пинтосевич</span>
                                     </a>
                                 </td>
-                                <td class="expertise">Бизнес, Маркетинг, Продажи, Стартапы</td>
+                                <td class="expertise">Мотивация, Личная эффективность, коучинг</td>
                                 <td>26</td>
                                 <td>26</td>
                                 <td>26</td>
@@ -311,9 +313,9 @@
                             <tr>
                                 <th scope="row">2</th>
                                 <td>
-                                    <a href="#" class="media">
-                                        <img src="img/sec_my_contacts/icaac.jpg" alt="">
-                                        <span>Виталий Тимошенко</span>
+                                    <a href="https://p.smartexpert.net/social/1LdarValiev" class="media">
+                                        <img src="img/sec_my_contacts/ildar.png" alt="">
+                                        <span>Ильдар Валиев</span>
                                     </a>
                                 </td>
                                 <td class="expertise">Мотивация, Личная эффективность, коучинг</td>
@@ -322,48 +324,7 @@
                                 <td>44</td>
                                 <td class="text-right"><a href="#" class="btn btn-blue">Подробнее</a></td>
                             </tr>
-                            <tr>
-                                <th scope="row">3</th>
-                                <td>
-                                    <a href="#" class="media">
-                                        <img src="img/sec_my_contacts/vitaliy_d.jpg" alt="">
-                                        <span>Виталий Тимошенко</span>
-                                    </a>
-                                </td>
-                                <td class="expertise">Управление, Менеджмент, командообразование</td>
-                                <td>26</td>
-                                <td>26</td>
-                                <td>54</td>
-                                <td class="text-right"><a href="#" class="btn btn-blue">Подробнее</a></td>
-                            </tr>
-                            <tr>
-                                <th scope="row">4</th>
-                                <td>
-                                    <a href="#" class="media">
-                                        <img src="img/sec_my_contacts/igor.jpg" alt="">
-                                        <span>Виталий Тимошенко</span>
-                                    </a>
-                                </td>
-                                <td class="expertise">Маркетинг, личный бренд, ораторство, коучинг </td>
-                                <td>26</td>
-                                <td>26</td>
-                                <td>6</td>
-                                <td class="text-right"><a href="#" class="btn btn-blue">Подробнее</a></td>
-                            </tr>
-                            <tr>
-                                <th scope="row">5</th>
-                                <td>
-                                    <a href="#" class="media">
-                                        <img src="img/sec_my_contacts/iomtov.jpg" alt="">
-                                        <span>Виталий Тимошенко</span>
-                                    </a>
-                                </td>
-                                <td class="expertise">Финансы, Доходы, Деньги, Состояние, Счастье</td>
-                                <td>26</td>
-                                <td>26</td>
-                                <td>11</td>
-                                <td class="text-right"><a href="#" class="btn btn-blue">Подробнее</a></td>
-                            </tr>
+
                         </tbody>
                     </table>
                 </div>
@@ -399,7 +360,7 @@
                         <img src="img/sec_my_articles/1.png" alt="">
                         <div class="card_body">
                             <h4>7 шагов на пути к новой работе</h4>
-                            <span class="date">12 мая 2019 г. Мария Консманова</span>
+                            <span class="date">27 августа 2019 г. Мария Консманова</span>
                             <div class="hr"></div>
                             <span class="tags">Работа, Рост, Профессионализм, Позитивный Менеджмент </span>
                             <a href="https://5sfer.com/24529-7-shagov-na-puti-k-novoy-rabote.html" class="btn btn-blue">Читать полностью</a>
@@ -411,7 +372,7 @@
                         <img src="img/sec_my_articles/2.png" alt="">
                         <div class="card_body">
                             <h4>ТОП 7 социальных сетей для поиска персонала</h4>
-                            <span class="date">7 мая 2019 г. Мария Консманова</span>
+                            <span class="date">19 мая 2019 г. Мария Консманова</span>
                             <div class="hr"></div>
                             <span class="tags">Фокус, Работа, Рост, Потенциал </span>
                             <a href="https://5sfer.com/24500-top-7-sotsial-nykh-setey-dlya-poiska-personala.html" class="btn btn-blue">Читать полностью</a>
@@ -423,7 +384,7 @@
                         <img src="img/sec_my_articles/3.png" alt="">
                         <div class="card_body">
                             <h4>Как собрать КОМАНДУ и зачем она вообще нужна?</h4>
-                            <span class="date">12 мая 2019 г. Мария Консманова</span>
+                            <span class="date">15 августа 2019 г. Мария Консманова</span>
                             <div class="hr"></div>
                             <span class="tags">Работа, Профессионализм, Стартап</span>
                             <a href="https://5sfer.com/24481-kak-sobrat-komandu-i-zachem-ona-voobshche-nuzhna.html" class="btn btn-blue">Читать полностью</a>
@@ -435,7 +396,7 @@
                         <img src="img/sec_my_articles/4.png" alt="">
                         <div class="card_body">
                             <h4>ТОП 8 полезных привычек успешных людей</h4>
-                            <span class="date">7 мая 2019 г. Мария Консманова</span>
+                            <span class="date">25 июля 2019 г. Мария Консманова</span>
                             <div class="hr"></div>
                             <span class="tags">Работа, Рост, Профессионализм</span>
                             <a href="https://5sfer.com/24359-top-8-poleznykh-privychek-uspeshnykh-lyudey.html" class="btn btn-blue">Читать полностью</a>
@@ -447,7 +408,7 @@
                         <img src="img/sec_my_articles/5.png" alt="">
                         <div class="card_body">
                             <h4>Linkedin - важная роль при поиске работы</h4>
-                            <span class="date">7 мая 2019 г. Мария Консманова</span>
+                            <span class="date">23 июля 2019 г. Мария Консманова</span>
                             <div class="hr"></div>
                             <span class="tags">Работа, Карьерный Рост, Профессионализм, Компетенции</span>
                             <a href="https://5sfer.com/24298-obyazatel-no.html" class="btn btn-blue">Читать полностью</a>
@@ -479,7 +440,7 @@
     </section>
     <!-- / sec_my_articles -->
     <!-- sec_success_stories -->
-    <section id="reviews" class="sec sec_success_stories">
+  <!--<section id="reviews" class="sec sec_success_stories">
         <div class="container">
             <img alt="" class="abs_pic stone_orange" src="img/abs_pic/stone_orange.svg">
             <img alt="" class="abs_pic stone_orange_bottom" src="img/abs_pic/stone_orange.svg">
@@ -521,9 +482,9 @@
                 </div>
             </div>
         </div>
-    </section>
+    </section -->
     <!-- / sec_success_stories -->
-
+<!--
     <section id="me_mentor" class="sec sec_your_mentor">
         <div class="container">
 
@@ -536,7 +497,7 @@
             </div>
             <div class="row">
                 <div class="col-md-6 img_wrapp">
-                    <img src="img/sec_your_mentor/konstantin.png" alt="konstantin">
+                    <img src="img/sec_your_mentor/maria.png" alt="maria">
                 </div>
                 <div class="col-md-6">
                     <div class="embed-responsive embed-responsive-16by9">
@@ -547,7 +508,7 @@
             </div>
         </div>
     </section>
-
+ -->
     <!-- sec_12 -->
     <section class="sec sec_12">
         <div class="container">
