--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                 <li class="nav-item">
                     <a class="nav-link" href="#my_articles">Мои статьи</a>
                 </li>
-              
+
             </ul>
             <form class="form-inline my-2 my-lg-0">
                 <a href="https://p.smartexpert.net/login" class="btn btn-success-2 my-2 my-sm-0">Войти</a>
@@ -124,9 +124,9 @@
             <img alt="" class="abs_pic circle_orange" src="img/abs_pic/circle_orange.svg">
             <div class="row align-items-center justify-content-between">
                 <div class="col col-md-6 left-col">
-                    <div class="embed-responsive embed-responsive-16by9">
-                        <iframe src="#" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-                    </div>
+                <!--    <div class="embed-responsive embed-responsive-16by9">
+                        <iframe src="" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                    </div> -->
                 </div>
                 <div class="col-xl-7 col-md-6 right-col main-txt">
                     <h2>Я готова помочь тебе достигать новых профессиональных результатов в карьере. </h2>
