--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
                         <h5>Мария Консманова</h5>
                         <div class="soc_links_wrapp">
                             <a href="https://www.facebook.com/people/Maria-Konsmanova/100009112262182" class="item"><img src="img/soc_links/fb.svg" alt="fb"></a>
-                            <a href="https://www.instagram.com/maria_konsmanova" class="item"><img src="img/soc_links/inst.svg" alt="inst"></a>
+                            <a href="https://www.instagram.com/maria_konsmanova" class="item"><img src="img/soc_links/inst.svg" width="25px" alt="inst"></a>
                             <a href="https://www.linkedin.com/in/konsmanovamaria/" class="item"><img src="img/soc_links/in.svg" alt="in"></a>
                         </div>
                         <a href="#" class="btn btn-blue">История взлетов и падений</a>
@@ -124,9 +124,9 @@
             <img alt="" class="abs_pic circle_orange" src="img/abs_pic/circle_orange.svg">
             <div class="row align-items-center justify-content-between">
                 <div class="col col-md-6 left-col">
-                <!--    <div class="embed-responsive embed-responsive-16by9">
-                        <iframe src="" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-                    </div> -->
+                    <div class="embed-responsive embed-responsive-16by9">
+                        <iframe src="https://www.youtube.com/embed/3yWeXNmV4y8" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                    </div>
                 </div>
                 <div class="col-xl-7 col-md-6 right-col main-txt">
                     <h2>Я готова помочь тебе достигать новых профессиональных результатов в карьере. </h2>
@@ -151,7 +151,7 @@
             <div class="card with-date">
                 <img alt="" class="abs_pic stone" src="img/abs_pic/stone_orange.svg">
                 <div class="media align-items-center">
-                    <img class="mr-md-3 media-image" src="img/sec_my_projects/card_img1.jpg" alt="Generic placeholder image">
+                    <img class="mr-md-3 media-image" src="img/sec_my_projects/salesDep.jpg" alt="Generic placeholder image">
                     <div class="media-body">
                         <div class="date_wrap">
                             <div class="item">
@@ -398,18 +398,6 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-md-6 card_wrapp">
-                    <div class="card_product">
-                        <img src="img/sec_my_articles/5.png" alt="">
-                        <div class="card_body">
-                            <h4>Linkedin - важная роль при поиске работы</h4>
-                            <span class="date">23 июля 2019 г. Мария Консманова</span>
-                            <div class="hr"></div>
-                            <span class="tags">Работа, Карьерный Рост, Профессионализм, Компетенции</span>
-                            <a href="https://5sfer.com/24298-obyazatel-no.html" class="btn btn-blue">Читать полностью</a>
-                        </div>
-                    </div>
-                </div>
             </div>
         </div>
     </section>
@@ -420,7 +408,7 @@
                 <img src="img/sec_latest_events/title_label.svg" alt="title_label">
                 <h2>Последние события</h2>
             </div>
-            <div class="row justify-content-between">
+            <div class="row justify-content-center">
                 <div class="col-md-6 card_wrapp">
                     <div class="card">
                         <div class="embed-responsive embed-responsive-16by9">
@@ -505,45 +493,7 @@
     </section>
  -->
     <!-- sec_12 -->
-    <section class="sec sec_12">
-        <div class="container">
-            <div class="row">
-                <div class="col-md-3">
-                    <h4>Контактная информация</h4>
 
-                    <table class="table table-borderless">
-                        <tr>
-                            <td>Телефон</td>
-                            <td><a href="tel:380968827050">+380 96 882 70 50</a></td>
-                        </tr>
-                        <tr>
-                            <td>Мейл</td>
-                            <td><a href="mailto:office@smartexpert.net">office@smartexpert.net</a></td>
-                        </tr>
-                    </table>
-                </div>
-                <div class="col-md-6">
-                    <div class="soc_links_wrapp mx-md-auto">
-                        <a href="#" class="item"><img src="img/soc_links/fb.svg" alt="fb"></a>
-                        <a href="#" class="item"><img src="img/soc_links/vk.svg" alt="vk"></a>
-                        <a href="#" class="item"><img src="img/soc_links/tw.svg" alt="tw"></a>
-                        <a href="#" class="item"><img src="img/soc_links/tg.svg" alt="tg"></a>
-                        <a href="#" class="item"><img src="img/soc_links/in.svg" alt="in"></a>
-                    </div>
-                </div>
-                <div class="col-md-3">
-                    <div class="form-group">
-                        <select class="form-control" id="lang">
-                            <option selected>Russian</option>
-                            <option>Ukraine</option>
-                            <option>Engish</option>
-                        </select>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
-    <!-- / sec_12 -->
     <!-- footer -->
     <footer class="sec">
         <div class="container">
