--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
     <!-- fixed header -->
     <nav class="navbar navbar-expand-md fixed-top">
-        <a class="navbar-brand" href="#"><img src="img/logo.png" alt=""></a>
+        <a class="navbar-brand" href="#"><img src="img/logo.png" width="40px" alt=""></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon">
                 <img src="img/nav/burger.svg" alt="burger">
@@ -82,7 +82,7 @@
                               <li><img src="img/sec_1/ok.svg" alt="ok">- Легко общаться с любым человеком
                               (Помогу создать Твой стиль успешного поведения с партнером)
                             </li> </p>
-                            <p>
+                        <!--    <p>
                              🤓 Мои хобби и увлечения:<br>
                                 1. Каждый год осваивать 2 новых навыка<br>
                                 2. Спорт<br>
@@ -98,7 +98,7 @@
                                 5. Диджей “Malinkin” Vinyls player (Великолепная коллекция  deep, minimal, house)<br>
                                 6. Гитара<br>
                                 7. Барабаны
-                              </li> </p>
+                              </li> </p> -->
                         </ul>
                     </div>
                   <!--  <div class="works">
@@ -205,24 +205,7 @@
                 <div class="media align-items-center">
                     <img class="mr-md-3 media-image" src="img/sec_my_projects/card_img1.png" alt="Generic placeholder image">
                     <div class="media-body">
-                        <div class="date_wrap">
-                            <div class="item">
-                                <span>Старт</span>
-                                <div class="date">
-                                  <!--  <span>июн</span>
-                                    <div>1</div> -->
-                                    2018 -
-                                </div>
-                            </div>
-                            <div class="item">
-                                <span>Финиш</span>
-                                <div class="date">
-                                  <!--  <span>июн</span>
-                                    <div>19</div> -->
-                                    по нв
-                                </div>
-                            </div>
-                        </div>
+                        
                         <p class="card_subtitle">1vvi.in</p>
                         <h4 class="card_title">1ldarVALIEV.ru</h4>
                         <div class="b-card-body">
@@ -559,7 +542,7 @@
                         <img src="img/sec_my_articles/1.png" alt="">
                         <div class="card_body">
                             <h4>Как стоять на своем, без существенных потерь!</h4>
-                            <span class="date">12 мая 2019 г. Ильдар Валиев</span>
+                            <span class="date">30 августа 2019 г. Ильдар Валиев</span>
                             <div class="hr"></div>
                             <span class="tags">Креативность, Понимание, Коммуникация </span>
                             <a href="https://5sfer.com/24542-kak-stoyat-na-svoyem-bez-sushchestvennykh-poter.html" class="btn btn-blue">Читать полностью</a>
@@ -571,7 +554,7 @@
                         <img src="img/sec_my_articles/2.png" alt="">
                         <div class="card_body">
                             <h4>Выбери успех — начни с движения</h4>
-                            <span class="date">7 мая 2019 г. Ильдар Валиев</span>
+                            <span class="date">28 августа 2019 г. Ильдар Валиев</span>
                             <div class="hr"></div>
                             <span class="tags">Профессионализм, Репутация, Мотивация, Счастье </span>
                             <a href="https://5sfer.com/24536-vyberi-uspekh-nachni-s-dvizheniya.html" class="btn btn-blue">Читать полностью</a>
@@ -583,7 +566,7 @@
                         <img src="img/sec_my_articles/3.png" alt="">
                         <div class="card_body">
                             <h4>Возьми контроль в свои руки</h4>
-                            <span class="date">12 мая 2019 г. Ильдар Валиев</span>
+                            <span class="date">28 августа 2019 г. Ильдар Валиев</span>
                             <div class="hr"></div>
                             <span class="tags">Дисциплина,Психология, Мышление</span>
                             <a href="https://5sfer.com/24535-voz-mi-kontrol-v-svoi-ruki.html" class="btn btn-blue">Читать полностью</a>
@@ -595,7 +578,7 @@
                         <img src="img/sec_my_articles/4.png" alt="">
                         <div class="card_body">
                             <h4>Позитивная энергия, тренды и главный вопрос</h4>
-                            <span class="date">7 мая 2019 г. Ильдар Валиев</span>
+                            <span class="date">21 августа 2019 г. Ильдар Валиев</span>
                             <div class="hr"></div>
                             <span class="tags">Креативность, Психология, Благодарность</span>
                             <a href="https://5sfer.com/24514-pozitivnaya-energiya-trendy-i-glavnyy-vopros.html" class="btn btn-blue">Читать полностью</a>
@@ -607,7 +590,7 @@
                         <img src="img/sec_my_articles/5.png" alt="">
                         <div class="card_body">
                             <h4>Заставьте себя выйти за пределы «Зоны КОМФОРТА»</h4>
-                            <span class="date">7 мая 2019 г. Ильдар Валиев</span>
+                            <span class="date">19 августа 2019 г. Ильдар Валиев</span>
                             <div class="hr"></div>
                             <span class="tags">Психология, Мышление, Понимание</span>
                             <a href="https://5sfer.com/24502-zastav-te-sebya-vyyti-za-predely-zony-komforta.html" class="btn btn-blue">Читать полностью</a>
@@ -619,7 +602,7 @@
                         <img src="img/sec_my_articles/6.png" alt="">
                         <div class="card_body">
                             <h4>ЖИВИ! МЕЧТАЙ! МОЛИСЬ!</h4>
-                            <span class="date">7 мая 2019 г. Ильдар Валиев</span>
+                            <span class="date">16 августа 2019 г. Ильдар Валиев</span>
                             <div class="hr"></div>
                             <span class="tags">Путешествия, Цели, Счастье</span>
                             <a href="https://5sfer.com/24495-zhivi-mechtay-molis.html" class="btn btn-blue">Читать полностью</a>
@@ -631,7 +614,7 @@
                         <img src="img/sec_my_articles/7.png" alt="">
                         <div class="card_body">
                             <h4>Быть СЧАСТЛИВЫМ, цени время</h4>
-                            <span class="date">7 мая 2019 г. Ильдар Валиев</span>
+                            <span class="date">15 августа 2019 г. Ильдар Валиев</span>
                             <div class="hr"></div>
                             <span class="tags">Путешествия,Отношения, Коммуникация</span>
                             <a href="https://5sfer.com/24482-byt-schastlivym-tseni-vremya.html" class="btn btn-blue">Читать полностью</a>
@@ -642,7 +625,7 @@
                         <img src="img/sec_my_articles/8.png" alt="">
                         <div class="card_body">
                             <h4>Результат зависит от ДЕЛАНИЯ</h4>
-                            <span class="date">7 мая 2019 г. Ильдар Валиев</span>
+                            <span class="date">14 августа 2019 г. Ильдар Валиев</span>
                             <div class="hr"></div>
                             <span class="tags">Мотивация, Успех, Счастье</span>
                             <a href="https://5sfer.com/24477-rezul-tat-zavisit-ot-delaniya.html" class="btn btn-blue">Читать полностью</a>
@@ -653,7 +636,7 @@
                         <img src="img/sec_my_articles/9.png" alt="">
                         <div class="card_body">
                             <h4>ORA et LABORA / Молись и работай</h4>
-                            <span class="date">7 мая 2019 г. Ильдар Валиев</span>
+                            <span class="date">13 августа 2019 г. Ильдар Валиев</span>
                             <div class="hr"></div>
                             <span class="tags">Психология, Благодарность, Мышление</span>
                             <a href="https://5sfer.com/24469-ora-et-labora-molis-i-rabotay.html" class="btn btn-blue">Читать полностью</a>
@@ -664,23 +647,14 @@
                         <img src="img/sec_my_articles/10.png" alt="">
                         <div class="card_body">
                             <h4>Контроль и его функции</h4>
-                            <span class="date">7 мая 2019 г. Ильдар Валиев</span>
+                            <span class="date">12 августа 2019 г. Ильдар Валиев</span>
                             <div class="hr"></div>
                             <span class="tags">Воспитание, Дисциплина, Психология</span>
                             <a href="https://5sfer.com/24463-kontrol-i-yego-funktsii.html" class="btn btn-blue">Читать полностью</a>
                         </div>
                     </div>
                 </div><div class="col-md-6 card_wrapp">
-                    <div class="card_product">
-                        <img src="img/sec_my_articles/11.png" alt="">
-                        <div class="card_body">
-                            <h4>Результативность - командная задача</h4>
-                            <span class="date">7 мая 2019 г. Ильдар Валиев</span>
-                            <div class="hr"></div>
-                            <span class="tags">Забота, Дисциплина, Психология</span>
-                            <a href="https://5sfer.com/24458-rezul-tativnost-komandnaya-zadacha.html" class="btn btn-blue">Читать полностью</a>
-                        </div>
-                    </div>
+
                 </div>
             </div>
         </div>
@@ -696,17 +670,17 @@
                 <div class="col-md-6 card_wrapp">
                     <div class="card">
                         <div class="embed-responsive embed-responsive-16by9">
-                            <iframe src="https://www.youtube.com/embed/ZdODCz6y0kE" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                            <iframe src="https://www.youtube.com/embed/M3h2vYHcm1Q" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                         </div>
-                        <p>Рассказиваю откуда берется силы для достижения целей</p>
+                        <p>Мастер-класс - Цель-результат. Постановка цели и мотивация </p>
                     </div>
                 </div>
                 <div class="col-md-6 card_wrapp">
                     <div class="card">
                         <div class="embed-responsive embed-responsive-16by9">
-                            <iframe src="https://www.youtube.com/embed/ZdODCz6y0kE" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                            <iframe src="https://www.youtube.com/embed/8xNQnhkI2YU" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                         </div>
-                        <p>Все бизнесы рано или поздно достигают потолка роста, как его пробить?</p>
+                        <p>Мастер-класс - Как развить в себе стрессоустойчивость</p>
                     </div>
                 </div>
             </div>
@@ -784,46 +758,7 @@
         </div>
     </section>
 
-    <!-- sec_12 -->
-    <section class="sec sec_12">
-        <div class="container">
-            <div class="row">
-                <div class="col-md-3">
-                    <h4>Контактная информация</h4>
 
-                    <table class="table table-borderless">
-                        <tr>
-                            <td>Телефон</td>
-                            <td><a href="tel:380968827050">+380 96 882 70 50</a></td>
-                        </tr>
-                        <tr>
-                            <td>Мейл</td>
-                            <td><a href="mailto:office@smartexpert.net">office@smartexpert.net</a></td>
-                        </tr>
-                    </table>
-                </div>
-                <div class="col-md-6">
-                    <div class="soc_links_wrapp mx-md-auto">
-                        <a href="#" class="item"><img src="img/soc_links/fb.svg" alt="fb"></a>
-                        <a href="#" class="item"><img src="img/soc_links/vk.svg" alt="vk"></a>
-                        <a href="#" class="item"><img src="img/soc_links/tw.svg" alt="tw"></a>
-                        <a href="#" class="item"><img src="img/soc_links/tg.svg" alt="tg"></a>
-                        <a href="#" class="item"><img src="img/soc_links/in.svg" alt="in"></a>
-                    </div>
-                </div>
-                <div class="col-md-3">
-                    <div class="form-group">
-                        <select class="form-control" id="lang">
-                            <option selected>Russian</option>
-                            <option>Ukraine</option>
-                            <option>Engish</option>
-                        </select>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
-    <!-- / sec_12 -->
     <!-- footer -->
     <footer class="sec">
         <div class="container">
